# medinovai-1in-kubernetes

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.medinovai.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .medinovai-standards.yaml  .port-config.json  .pre-commit-config.yaml  .pylintrc  .repo-governance.yml  .trivyignore  .yamllint  ACT_MODE_COMPLETION_SUMMARY.md  ACT_MODE_STATUS_UPDATE.md  AGENTS.md  AGENT_SWARMS_EXECUTION_GUIDE.md  AI_GENERATED_PRD.md  AI_STANDARDS_DEPLOYMENT_PACKAGE.md  ANTHROPIC_CTO_DEPLOYMENT_PLAN.md  AUTONOMOUS_SESSION_SUMMARY.md  BMAD_BRUTAL_REVIEW_1.md  BMAD_CONTEXT_MANAGEMENT_SYSTEM.md  BMAD_EXECUTION_PLAN.md  BMAD_EXECUTION_REPORT.md  BMAD_EXECUTION_STATUS_REPORT.md  BMAD_FINAL_DEPLOYMENT_STATUS.md  BMAD_METHOD_TASKS_GITHUB_MIGRATION.md  BRUTAL_HONEST_REVIEW.md  BRUTAL_HONEST_TEST_REPORT.json  CHANGELOG.md  CHARTER.md  CHECKPOINT_RELEASE_v2.1.0.md  CLAUDE.md  CODEOWNERS  COMPLETE_SESSION_SUMMARY.txt  COMPREHENSIVE_CLEAN_DEPLOYMENT_PLAN.md  (+292 more)
.atlasos/: DECISIONS.md  REPO_PROFILE.md
.cursor/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.yml  dependabot.yml  release.yml  security.yml
.medinovai/: data-services-config.yml  registry-config.yml  standards.yml
MedinovAI-Module-Development-Package-v2.0.0/: CURSOR_DEVELOPMENT_PROMPTS.md  FULL_MODULE_DEVELOPMENT_PACKAGE.md  MEDINOVAI_MODULE_DEVELOPMENT_SPECS.md  README.md  RELEASE_NOTES.md  VERSION.md
PRDs/: medinovai-compliance-services-PRD.md  medinovai-security-services-PRD.md
alembic/: env.py
app/: main.py
docs/: API.md  (+136 more)
(+2448 files in other folders)
