[project]
name = "medinovai-infrastructure"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (require running service)",
    "e2e: end-to-end tests",
    "slow: tests that take > 5s",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["medinovai_infrastructure"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["medinovai_infrastructure"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
